--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         
         <div class="logo_container">
-            <img src="./res/image/logo.svg" class="logo_image" width="200px">
+            <img src="res/image/logo.png" class="logo_image" width="200px">
         </div>
 
         <div class="instagram_container">
