--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <a href="https://discord.gg/vuwmybAw">Discord</a>
     </div>
     
+    <iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=29&p=11&l=ez&f=ifr&linkID=2fc8839f870369568e5eb102fe995665&t=animenet0e-21&tracking_id=animenet0e-21" width="120" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+
     <footer class="footer">
             <p>Copyright © AnimeNet All right Reserved</p>
     </footer>
