--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="discord_container">
-            <a href="https://discord.gg/vuwmybAw" target="_blank">
+            <a href="https://discord.gg/RefhZx4vn7" target="_blank">
                 <h2>Discord</h2>
                 <p href="#">Unisciti al server discord</p>
                 <i class="fab fa-discord"></i>
@@ -46,7 +46,7 @@
         <a href="https://www.amazon.it/hz/wishlist/ls/1VWEK1FBB5MKV?ref_=wl_share" target="_blank">Wishlist</a>
         <a href="#">Cooming Soon</a>
         <a href="https://t.me/animenet_ita">Telegram</a>
-        <a href="https://discord.gg/vuwmybAw">Discord</a>
+        <a href="https://discord.gg/RefhZx4vn7">Discord</a>
     </div>
 
 
