--- a/index.html
+++ b/index.html
@@ -22,17 +22,21 @@
 
         <div class="instagram_container">
             <a href="https://www.instagram.com/animenet_ita/" target="_blank">
-                <h2>AnimeNet</h2>
-                <p href="">Seguici su instagram</p>
+                <div class="container_text">
+                    <h2>AnimeNet</h2>
+                    <p href="">Seguici su instagram</p>
+                </div>
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
 
-        <div class="discord_container">
-            <a href="https://discord.gg/vuwmybAw" target="_blank">
-                <h2>Discord</h2>
-                <p href="#">Unisciti al server discord</p>
-                <i class="fab fa-discord"></i>
+        <div class="telegram_container">
+            <a href="https://t.me/animenet_ita" target="_blank">
+                <div class="container_text">
+                    <h2>Telegrams</h2>
+                    <p href="#">Entra sul nostro Telegram</p>
+                </div>
+                <i class="fab fa-telegram"></i>
             </a>
         </div>
 
@@ -43,10 +47,9 @@
 
     <div class="button_container">
         <a href="https://www.instagram.com/animenet_ita/" target="_blank">Instagram</a>
-        <a href="https://www.amazon.it/hz/wishlist/ls/1VWEK1FBB5MKV?ref_=wl_share" target="_blank">Wishlist</a>
         <a href="#">Cooming Soon</a>
         <a href="https://t.me/animenet_ita">Telegram</a>
-        <a href="https://discord.gg/vuwmybAw">Discord</a>
+        <a href="https://discord.gg/Knchf7gysV">Discord</a>
     </div>
 
 
