--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="telegram_container">
             <a href="https://t.me/animenet_ita" target="_blank">
                 <div class="container_text">
-                    <h2>Telegrams</h2>
+                    <h2>Telegram</h2>
                     <p href="#">Entra sul nostro Telegram</p>
                 </div>
                 <i class="fab fa-telegram"></i>
