--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="button_container">
         <a href="https://www.instagram.com/animenet_ita/" target="_blank">Instagram</a>
-        <a href="#">Cooming Soon</a>
+        <a href="#">Coming Soon</a>
         <a href="https://t.me/animenet_ita">Telegram</a>
         <a href="https://discord.gg/Knchf7gysV">Discord</a>
     </div>
